<resources>
    <string name="app_name">Izzys Movie App</string>
    <string name="action_settings">Settings</string>
    <string name="movie_title">Movie Title</string>
    <string name="sort_title">Sort By:</string>
    <string name="sort_key">sort</string>
    <string name="sort_popular">Popular</string>
    <string name="sort_top_rated">Top Rated</string>
    <string name="sort_popular_value">popular</string>
    <string name="sort_top_rated_value">top_rated</string>
    <string name="release_date_text">"Release Date: "</string>
    <string name="vote_average_text">"Vote Average: "</string>
    <string name="vote_average_title">Vote Average</string>
    <string name="date_title">Date</string>
    <string name="overview_title">Overview:</string>
    <string name="overview_text">Overview Text</string>
</resources>
