<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:backgroundTint="@color/colorPrimary">

            <ImageView
                android:id="@+id/movie_poster_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/movie_title_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/movie_poster_detail"
                android:layout_toEndOf="@+id/movie_poster_detail"
                android:layout_toRightOf="@+id/movie_poster_detail"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:lines="2"
                android:text="@string/movie_title"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vote_average__detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/release_date_detail"
                android:layout_toEndOf="@+id/movie_poster_detail"
                android:layout_toRightOf="@+id/movie_poster_detail"
                android:gravity="center"
                android:text="@string/vote_average_title"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/release_date_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/movie_poster_detail"
                android:layout_toEndOf="@+id/movie_poster_detail"
                android:layout_toRightOf="@+id/movie_poster_detail"
                android:gravity="center"
                android:text="@string/date_title"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/movie_overview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/overview_title"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/movie_overview_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/overview_text" />

    </LinearLayout>
</ScrollView>